[frontend & backend] replace LocalStorage with MinIO